# Jr-dev-agent

./: .gitignore  FIXES_SUMMARY.md  MCP_SETUP.md  README.md  READY_TO_USE.md  config.json  docker-compose.yml  plan.md  pyproject.toml  pytest.ini  requirements.md  requirements.txt
.cursor/: mcp.json
.github/workflows/: auto-tag.yml
config/: environment.example
jr_dev_agent/: Dockerfile
jr_dev_agent/clients/: confluence_client.py  jira_client.py
jr_dev_agent/fallback/: jira_prompt.json  jira_ticket_template.txt
jr_dev_agent/graph/: jr_dev_graph.py  message.py
jr_dev_agent/models/: mcp.py  prompt.py  session.py  ticket.py
jr_dev_agent/nodes/: __init__.py  jira_prompt_node.py
jr_dev_agent/prebuilt/: __init__.py  tool_node.py
jr_dev_agent/server/: main.py  mcp_gateway.py
jr_dev_agent/services/: pess_client.py  (+4 more)
langgraph/: __init__.py
langgraph_mcp/: Dockerfile  README.md  __init__.py  mcp_gateway.py
pess_scoring/: Dockerfile  README.md  __init__.py  requirements.txt  service.py
promptbuilder/: Dockerfile  __init__.py  requirements.txt  service.py
scripts/: demo_mcp_workflow.py  mcp_stdio_server.py  start_mcp_gateway.py  start_mcp_server.py  test_mcp_gateway.py  test_mcp_server.py  test_mvp_fallback.py  verify_mcp_setup.py
session_management/: Dockerfile  __init__.py  requirements.txt  service.py
synthetic_memory/: Dockerfile  __init__.py  requirements.txt  service.py
template_intelligence/: Dockerfile  __init__.py  requirements.txt
tests/: README.md  conftest.py  requirements.txt  run_tests.py
vscode-extension/: README.md  package.json
(+133 files in other folders)
